--- a/examples/demo_usage.ipynb
+++ b/examples/demo_usage.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ed0dca6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "76033214",
    "metadata": {},
    "outputs": [],
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ca21eff1",
    "metadata": {},
    "outputs": [],
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "944d6eee",
    "metadata": {},
    "outputs": [
@@ -51,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11111pq1/rbP111kk/kn11k111/1k111kR1/1111K111/111111K1/KK111KBK/11111PQ1\n"
+      "11111rk1/qbR111pp/pn11p111/1p111pQ1/1111P111/111111P1/PP111PBP/11111RK1\n"
      ]
     }
    ],
