training api improvements

--- a/examples/demo_usage.ipynb
+++ b/examples/demo_usage.ipynb
@@ -12,6 +12,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "298c7968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure chessimg2pos is importable whether installed via pip or run from a cloned repo\n",
+    "try:\n",
+    "    import chessimg2pos  # noqa: F401\n",
+    "except ImportError:\n",
+    "    import sys, os\n",
+    "\n",
+    "    # Notebook is inside examples/ — src is one level up\n",
+    "    sys.path.insert(0, os.path.abspath(\"../src\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f90214f5",
    "metadata": {},
@@ -36,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = \"../images/chess_image.png\" #REPLACE WITH THE PATH OF YOUR TEST IMAGE\n",
+    "img_path = \"../images/chess_image.png\"  # REPLACE WITH THE PATH OF YOUR TEST IMAGE\n",
     "\n",
     "fen = predict_fen(img_path)"
    ]
@@ -58,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict_fen(img_path, output_type = \"complex\")"
+    "predict_fen(img_path, output_type=\"complex\")"
    ]
   },
   {
@@ -89,12 +106,13 @@
    "outputs": [],
    "source": [
     "trainer = ChessRecognitionTrainer(\n",
-    "    images_dir=\"../../training_images/chessboards\", # replace with your path\n",
-    "    classifier = \"enhanced\",\n",
-    "    model_path=\"../../models/test_model.pt\",# replace with path where you want models tgo be saved\n",
+    "    images_dir=\"../../training_images/chessboards\",  # replace with your path\n",
+    "    classifier=\"enhanced\",\n",
+    "    model_path=\"../../models/test_model.pt\",  # replace with path where you want models tgo be saved\n",
     "    generate_tiles=False,  # Set to True if tiles need to be generated from boards\n",
-    "    epochs = 5,\n",
-    "    overwrite = False\n",
+    "    epochs=5,\n",
+    "    overwrite=False,\n",
+    "    board_level_split=True,\n",
     ")\n",
     "model, device, accuracy = trainer.train()"
    ]
@@ -108,7 +126,7 @@
    "source": [
     "from chessimg2pos import ChessPositionPredictor\n",
     "\n",
-    "predictor = ChessPositionPredictor(\"../../models/test_model.pt\", classifier = \"enhanced\")\n",
+    "predictor = ChessPositionPredictor(\"../../models/test_model.pt\", classifier=\"enhanced\")\n",
     "result = predictor.predict_chessboard(\"../images/ccom_1.png\", return_tiles=True)"
    ]
   },
